--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -8,7 +8,7 @@
 .about-header h1 {
     font-size: 3em;
     font-weight: 800;
-    color: #000;
+    color: #BF5700;
     margin-bottom: 10px;
 }
 
