--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -77,7 +77,7 @@
     margin-bottom: 20px;
 }
 
-.mission-text p, vision-text p{
+.mission-text p, .vision-text p{
     color: #fff;
     font-size: 1.1em;
     line-height: 1.8;
