--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,6 @@
 .about-header {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 60px;
     background-color: #fff;
 }
@@ -13,11 +13,7 @@
 }
 
 .about-header .underline {
-    width: 120px;
-    height: 5px;
-    background-color: #000;
-    margin: 0 auto;
-    border-radius: 3px;
+    display: none;
 }
 
 /* --- Mission & Vision Section --- */
