--- a/assets/css/leadership.css
+++ b/assets/css/leadership.css
@@ -102,12 +102,12 @@
   margin: 0 0 2px;
   font-weight: 800;
   font-size: 1.12rem;
-  color: #0f172a;
+  color: #fff;
 }
 
 .officer-pronouns{
   margin:0 0 6px;          
-  color:#475569;
+  color:#fff;
 }
 
 .officer-role{
@@ -119,7 +119,7 @@
 
 .officer-major{
   margin:0;
-  color:#475569;
+  color:#fff;
   font-size:.95rem;
 }
 
