--- a/assets/css/leadership.css
+++ b/assets/css/leadership.css
@@ -123,5 +123,30 @@
   font-size:.95rem;
 }
 
+.leader-grid.bod {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(250px 1fr));
+  gap: 32px 28px;
+  justify-items: center;
+}
+
+.leader-grid.bod .officer-card{
+  width: 100%
+  max-width: 320px;
+  border-radius: 16px;
+}
+
+.leader-grid.bod > .officer-cart:nth-child(5) {
+  grid-column: 2;
+}
+
+.leader-grid.bod > .officer-cart:nth-child(6) {
+  grid-column: 3;
+}
+.leader-grid.bod > .officer-cart:nth-child(7) {
+  grid-column: 4;
+}
+
+
 
 
