--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -154,19 +154,20 @@
   z-index:0 ;
 }
 
-.pillars .section-title{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--band);
-  margin: 0;                      
-  line-height: 1.1;
-  font-weight: 800;
-  font-size: clamp(2rem, 3.5vw, 3rem);
-  color: #BF5700;
-  letter-spacing: .5px;
-  padding-top: 0;
-  padding-bottom: 0;
+.pillars .section-title {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: var(--band);
+    margin: 0;                      
+    line-height: 1.1;
+    font-weight: 800;
+    font-size: clamp(2rem, 3.5vw, 3rem);
+    color: #BF5700;
+    letter-spacing: .5px;
+    padding: 0;
 }
 
 .pillars-wrap {
@@ -364,6 +365,10 @@
 .btn-outline:hover { 
     border-color:#BF5700; 
     color:#BF5700; 
+}
+
+.pillars-figure{
+  transform: translateX(12px);  
 }
 
 
